MakeFile updated GarageState.hpp still buggy

--- a/bridge/Makefile
+++ b/bridge/Makefile
@@ -18,8 +18,8 @@ bin/bridge: obj/Config.o obj/GarageState.o
 
 
 obj/Config.o: src/Config.cpp src/Config.hpp
-	$(CC) $(CC_OPTIONS) $< -o $@
+	$(CC) $(CC_OPTIONS) -c $< -o $@
 
 
 obj/GarageState.o: src/GarageState.cpp src/GarageState.hpp
-	$(CC) $(CC_OPTIONS) $< -o $@
+	$(CC) $(CC_OPTIONS) -c $< -o $@
