--- a/bridge/Makefile
+++ b/bridge/Makefile
@@ -14,7 +14,7 @@ clean:
 	rm -f obj/*. bin/*. 
 
 
-bin/bridge: obj/Config.o obj/GarageState.o obj/main.o
+bin/bridge: obj/Config.o obj/GarageState.o obj/main.o obj/GarageDriverProtocol.o obj/SerialPort.o
 	$(CC) -o $@ $+ 
 
 
@@ -24,11 +24,14 @@ obj/Config.o: src/Config.cpp src/Config.hpp src/Logger.cpp src/Logger.hpp
 obj/GarageState.o: src/GarageState.cpp src/GarageState.hpp src/MotorState.hpp
 	$(CC) $(CC_OPTIONS) -c $< -o $@
 
+obj/GarageDriverProtocol.o: src/GarageDriverProtocol.cpp src/GarageDriverProtocol.hpp
+	$(CC) $(CC_OPTIONS) -c $< -o $@
+
 obj/Loggger.o: src/Logger.cpp src/Logger.hpp
 	$(CC) $(CC_OPTIONS) -c $< -o $@
 
 obj/SerialPort.o: src/SerialPort.cpp src/SerialPort.hpp src/Logger.cpp src/Logger.hpp
 	$(CC) $(CC_OPTIONS) -c $< -o $@
 
-obj/main.o: src/main.cpp src/Config.hpp src/Logger.cpp src/Logger.hpp
+obj/main.o: src/main.cpp src/Config.hpp src/Logger.cpp src/Logger.hpp src/GarageDriverProtocol.cpp src/GarageDriverProtocol.hpp
 	$(CC) $(CC_OPTIONS) -c $< -o $@
