--- a/bridge/Makefile
+++ b/bridge/Makefile
@@ -1,16 +1,21 @@
+.PHONY: all clean
+
+
+CC=g++
+CC_OPTIONS=-std=c++11 -Wall -O3
+# CC_OPTIONS=-std=c++11 -Wall -O0 -g
+
+
 all: bin/bridge
 
 
-
-bin/bridge: obj/Config.o
-	g++ -o $@ $+ 
-
-obj/Config.o: src/Config.cpp src/Config.hpp
-	g++ -std=c++11 $< -o $@
-
-
-
-.PHONY: all clean
-
 clean:
 	rm -f obj/*. bin/*. 
+
+
+bin/bridge: obj/Config.o
+	$(CC) -o $@ $+ 
+
+
+obj/Config.o: src/Config.cpp src/Config.hpp
+	$(CC) $(CC_OPTIONS) $< -o $@
